# Path_to_Home_game-remastered

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  agent.md  config.toml
Path_to_Home_game/: Fuel.cpp  Fuel.h  Game.cpp  Game.h  GameState.h  Meteor.cpp  Meteor.h  main.cpp  worklibgamer.cpp  worklibgamer.h
src/: Fuel.cpp  Fuel.h  Game.cpp  Game.h  GameState.h  Hud.cpp  Hud.h  Meteor.cpp  Meteor.h  ParticleSystem.cpp  ParticleSystem.h  ResourcePaths.cpp  ResourcePaths.h
